# Epitech-JAM

./: .gitignore  CMakeLists.txt  README.md  TODO  game_bin  makebuild.sh
assets/: coffe_machine.glb  office_props_lowpoly.glb  vending_machine.glb  water_cooler.glb
cmake/: Findraylib.cmake
game/: CMakeLists.txt
game/includes/: Button.hpp  Enemies.hpp  Items.hpp  Level.hpp  Menu.hpp  Player.hpp  render.hpp
game/src/: Button.cpp  Enemies.cpp  Generation.cpp  Items.cpp  Level.cpp  Malek.cpp  Menu.cpp  Player.cpp  main.cpp
